# autocloud

./: .gitignore  activate_venv  apis.py  autocloud.sh  cmds.txt  first_setup.py  main.py  notes_on_versions.md  setup.cfg  setup_venv.py  utils.py
.vscode-suggested/: settings.json
tokens/: README.md  _helper.py  example.txt
