# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = lemnaac
description = An automatic cloud
version = attr: lemnaac.__version__  # 0.2021.1105.0

[options]

package_dir =
    = src  # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
packages = find:
install_requires =  
    # Application dependencies
    requests
    python_version >= "3.10"
tests_require =  
    # Test dependencies
    pytest
# setup_requires (Build dependencies) are listed in pyproject.toml

[options.entry_points]
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# syntax is: <name> = [<package>.[<subpackage>.]]<module>[:<object>.<object>]
console_scripts =
    lac = lemnaac:run  # will call the func run() from lemnaac.__init__.py

[options.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
where = src
